# FGCD

./: .gitignore  COPYING.txt  Cargo.toml  README.md
data/: README.md
data/devices/: DualSense Wireless Controller.fods  Xbox Wireless Controller (M1914).fods
data/games/Mortal Kombat 1/: Game.fods
data/games/Mortal Kombat 1/characters/: Johnny Cage.fods
docs/notes/: ROADMAP.md
model/: Cargo.toml  README.md  build.rs
model/src/: game.rs  input.rs  lib.rs  submodels.rs
model/src/input/: parse.rs
model/src/submodels/: mk12.rs
parse/: Cargo.toml
parse/cli/: Cargo.toml  README.md
parse/cli/src/: cli.rs  lib.rs  main.rs  spreadsheet.rs  submodels.rs
parse/cli/src/binary/: game.rs
parse/cli/src/binary/game/: character.rs
parse/cli/src/spreadsheet/: game.rs
parse/cli/src/spreadsheet/game/: character.rs
parse/cli/src/submodels/: mk12.rs
parse/cli/tests/: io.rs
parse/macro/: Cargo.toml
wasm/: Cargo.toml
wasm/src/: lib.rs
